ingress-nginx/ingress-private.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-private
  annotations:
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: credentials
    nginx.ingress.kubernetes.io/auth-realm: "Get lost unless you got the special password"

spec:
  ingressClassName: nginx
  rules:
    - host: queue.fleetman.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fleetman-queue
                port:
                  number: 8161
